--- a/aula3/SERVER/package.json
+++ b/aula3/SERVER/package.json
@@ -10,6 +10,9 @@
   "author": "luizriato",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "body": "^5.1.0",
+    "express": "^5.1.0",
+    "method-override": "^3.0.0",
+    "parser": "^0.1.4"
   }
 }
