--- a/aula3 - ApiRestfulMvc/SERVER/package.json
+++ b/aula3 - ApiRestfulMvc/SERVER/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^5.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.0",
