--- a/taref_crud_luiz_riato2/FRONTEND/my-app/src/package.json
+++ b/taref_crud_luiz_riato2/FRONTEND/my-app/src/package.json
@@ -9,28 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.5.0",
-    "expo": "~53.0.22",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-sqlite": "~15.2.14",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-gesture-handler": "^2.29.0",
+    "expo": "^54.0.19",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-sqlite": "~16.0.8",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.18.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.20.0",
-    "@react-native-picker/picker": "2.11.1"
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "typescript": "~5.8.3",
-    "@types/react": "~19.0.10"
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
